<?xml version ="1.0"?>
<package>
<name>comm</name>
<version >0.0.1 </version >
<description >
comm
</description >
<maintainer email="lianbin@ren001.com">
BinLian
</maintainer >
<license >BinLian</license >
<buildtool_depend>catkin </buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
