<?xml version ="1.0"?>
<package>
<name>common_lib_demo</name>
<version >0.0.1 </version >
<description >
commom_lib
</description >
<maintainer email="lianbin@ren001.com">
BinLian
</maintainer >
<license >BinLian</license >
<buildtool_depend>catkin </buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>common_lib</build_depend>
  <run_depend>common_lib</run_depend>
</package>
